--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint": "eslint --cache --fix {src,scripts}/**/*.{ts,tsx,js,mjs}"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
     "@mdi/js": "^7.3.67",
     "@mdi/react": "^1.6.1",
     "@playwright/test": "^1.39.0",
@@ -52,9 +53,9 @@
     "@types/jest": "^29.5.7",
     "@types/morgan": "^1.9.9",
     "@types/randomstring": "^1.1.11",
-    "@types/react": "^18.2.34",
+    "@types/react": "^18.2.46",
     "@types/react-detect-offline": "^2.4.5",
-    "@types/react-dom": "^18.2.14",
+    "@types/react-dom": "^18.2.18",
     "@types/semver": "^7.5.4",
     "@types/yargs": "^17.0.29",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -104,7 +105,7 @@
     "tiny-invariant": "^1.3.1",
     "ts-jest": "^29.1.1",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "uniqolor": "^1.1.0",
     "yargs": "^17.7.2"
   },
@@ -142,5 +143,8 @@
   "bugs": {
     "url": "https://github.com/git-truck/git-truck/issues"
   },
-  "homepage": "https://github.com/git-truck/git-truck#readme"
+  "homepage": "https://github.com/git-truck/git-truck#readme",
+  "dependencies": {
+    "@catppuccin/palette": "^1.0.3"
+  }
 }
